--- a/contribute/index.html
+++ b/contribute/index.html
@@ -336,7 +336,7 @@
                                     {
                                         type: "text",
                                         data: {
-                                            text: "This website is built using <a class='hover:text-teal-400 text-white border-b border-dotted' href='https://hyderjs.tech/'>HyderJS</a> - Glad we had best CDN from <a class='hover:text-teal-400 text-white border-b border-dotted' href='https://www.jsdelivr.com/'>JSDelivr</a> for <a class='hover:text-teal-400 text-white border-b border-dotted' href='https://cdn.jsdelivr.net/gh/imprakashraghu/hyderjs/lib/hyder.min.js'>HyderJS CDN</a>",
+                                            text: "This website is built using <a class='hover:text-teal-400 text-white border-b border-dotted' href='https://hyderjs.tech/'>HyderJS</a> - Glad we had best CDN from <a class='hover:text-teal-400 text-white border-b border-dotted' href='https://rawgit.org/'>RawGit</a> for <a class='hover:text-teal-400 text-white border-b border-dotted' href='https://ghcdn.rawgit.org/imprakashraghu/hyderjs/v0.0.1/lib/hyder.min.js'>HyderJS CDN</a>",
                                             className: "text-white text-sm py-1 text-center"
                                         }
                                     },
