--- a/license/index.html
+++ b/license/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="app"></div>
 </body>
-    <script src="../lib/hyder.min.js"></script>
+    <script src="../assets/js/hyder.min.js"></script>
     <script>
         let blocks = [
             {
