--- a/play/export/index.html
+++ b/play/export/index.html
@@ -12,29 +12,13 @@
 </head>
 <body>
     <div class="w-full h-full flex flex-col items-center lg:px-0 px-6">
-        <div class="w-full flex flex-col items-center justify-center" style="height: 500px;">
+        <div class="w-full flex flex-col items-center justify-center" style="height: 300px;">
             <p class="text-center text-4xl lg:text-5xl font-black text-gray-700">Host your website now</p>
             <p class="text-center text-lg lg:text-xl text-gray-700">view your website just exported using hyderjs in the internet.</p>
-            <button onclick="learn()" id="download" class="px-4 py-3 text-white font-bold bg-teal-400 mt-4 rounded-md outline-none focus:outline-none hover:bg-teal-500"><i class="fa fa-info-circle mr-2"></i>Learn More</button>            <a href="/" class="w-full text-center text-gray-600 mt-4 text-sm underline hover:text-teal-500 cursor-pointer">Go back to home</a>
+            <a href="/" class="w-full text-center text-gray-600 mt-4 text-sm underline hover:text-teal-500 cursor-pointer">Go back to home</a>
         </div>
         <div class="w-full flex flex-col items-center justify-center">
-            <p id="learn" class="text-center font-bold text-2xl text-black mt-10">1) Open <a class="text-teal-500 underline" href="https://fast.io">Fast.io</a>.</p>
-            <img src="../../assets/img/homepage-fast.png" alt="fastiohomepage" class="lg:px-40 py-10">            
-            <p class="text-center font-bold text-2xl text-black mt-10">2) Create your first new site.</p>
-            <img src="../../assets/img/newsite.png" alt="fastiohomepage" class="lg:px-40 py-10">
-            <div class="w-full flex lg:flex-row flex-col items-center justify-center">
-                <div class="w-full flex flex-col items-center">
-                    <p class="text-center font-bold text-2xl text-black mt-10">3) Choose Google Drive.</p>
-                    <img src="../../assets/img/drive.png" alt="fastiohomepage" class="lg:px-10 py-10">
-                </div>
-                <div class="w-full flex flex-col items-center">
-                    <p class="text-center font-bold text-2xl text-black mt-10">4) Select the webpages options.</p>
-                    <img src="../../assets/img/sitetype.png" alt="fastiohomepage" class="lg:px-10 py-10">
-                </div>
-            </div>
-            <p class="text-center font-bold text-2xl text-black mt-10">5) Extract and upload your exported files into your <a class="text-teal-500 underline" href="">Google Drive</a>.</p>
-            <p class="w-full text-center mt-2 text-gray-700">you can find your <strong>fastio folder</strong> in your google drive where you upload your export files into it.</p>            
-            <img src="../../assets/img/uploads.jpg" alt="fastiohomepage" class="px-40 py-10">
+            <p id="learn" class="text-center font-bold text-2xl text-black mt-2"><a class="hover:text-teal-400" href='https://pages.github.com/'>GitHub Pages</a> | <a class="hover:text-teal-400" href='https://www.netlify.com/'>Netlify</a> | <a class="hover:text-teal-400" href='https://surge.sh'>Surge</a></p>            
             <p class="w-full text-center text-2xl mt-6 font-bold text-gray-700 mb-10">That's it your website is now online!<br/> Give hyderjs a <a class="hover:text-red-400 underline" href="">Star</a>⭐</p>
              <!-- footer -->
             <div class="w-full flex flex-col py-3 items-center mb-10" style="height: 150px;">        
