--- a/play/index.html
+++ b/play/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="../assets/css/tailwind.css">
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+<style>
+  body {
+    overflow-y: overlay;
+    overflow-x: hidden;
+  }
+  body::-webkit-scrollbar {
+        display: none;
+    }
+</style>
+</style>
 <body>
     <div class="main__bg">
       <img src="../assets/img/play-bg.svg" alt="" class="bg__image">      
