--- a/play/editor/index.html
+++ b/play/editor/index.html
@@ -110,11 +110,11 @@
                         lineHeight: 1,
                         textAlign: "center", 
                         fontWeight: 800,
-                        fontSize: '2rem',
-                        margin: {
+                        fontSize: '2rem'                                        
+                    },
+                    margin: {
                             y: 4
-                        }                   
-                    }
+                        }  
                 }        
             }
         ];        
