--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>HyderJS - Javascript Library to build UI for web using JSON</title>
     <link rel="stylesheet" href="assets/css/tailwind.css" />
     <link rel="icon" href="assets/img/logo-sm.png" />    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-152699545-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-152699545-2');
+</script>
+
   </head>
   <style></style>
   <body>
