--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 text: "HyderJS",
                 className: "text-white font-bold text-lg cursor-pointer",
                 onclick: function () {
-                  window.location.replace("/");
+                  window.location.replace("");
                 },
               },
             },
@@ -103,7 +103,7 @@
                       text: "Documentation",
                       className:
                         "hidden lg:block text-sm text-white cursor-pointer hover:text-teal-400 mx-2",
-                      href: "/docs/v1/",
+                      href: "docs/v1/",
                     },
                   },
                 ],
@@ -152,7 +152,7 @@
                   "bg-teal-400 hover:text-white my-4 px-4 py-2 font-bold rounded-md outline-none focus:outline-none",
                 text: "Get Started",
                 onclick: function () {
-                  window.location.replace("/docs/v1/");
+                  window.location.replace("docs/v1/");
                 },
               },
             },
@@ -425,7 +425,7 @@
               type: "link",
               data: {
                 text: "Go Now",
-                href: "/play",
+                href: "play",
                 className:
                   "text-gray-600 border-b-4 hover:border-teal-400 cursor-pointer mt-3",
               },
@@ -499,7 +499,7 @@
               type: "link",
               data: {
                 text: "Become a Contributor",
-                href: "/contribute/",
+                href: "contribute/",
                 className:
                   "text-gray-600 border-b-4 hover:border-teal-400 cursor-pointer mt-3",
               },
