--- a/license/index.html
+++ b/license/index.html
@@ -6,6 +6,11 @@
     <title>MIT License - HyderJS</title>
     <link rel="stylesheet" href="../assets/css/tailwind.css">    
     <link rel="icon" href="../assets/img/logo-sm.png">
+    <meta name="description" content="HyderJS is an open source javascript library which is built on top of ECMA Script 6">
+    <meta name="keywords" content="javascript, es6, bootstrap, tailwindcss, compiler">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
 </head>
 <body>
     <div id="app"></div>
