--- a/play/index.html
+++ b/play/index.html
@@ -8,6 +8,11 @@
   <title>Play - HyderJS | Create Websites with JSON Live Editor</title>  
   <link rel="stylesheet" href="../assets/css/tailwind.css">
   <link rel="stylesheet" href="../assets/css/style.css">
+  <meta name="description" content="HyderJS is an open source javascript library which is built on top of ECMA Script 6">
+    <meta name="keywords" content="javascript, es6, bootstrap, tailwindcss, compiler">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
 </head>
 <style>
   body {
