--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/css/tailwind.css" />
     <link rel="icon" href="assets/img/logo-sm.png" />    
     <meta property="og:image" content="https://hyder.js.org/assets/img/logo.png"/>
-    <meta name="title" content="HyderJS - Javascript Library to build UI for web using JSON">
-    <meta name="description" content="HyderJS is an open source javascript library which is built on top of ECMA Script 6">
+    <meta name="og:title" content="HyderJS - Javascript Library to build UI for web using JSON">
+    <meta name="og:description" content="HyderJS is an open source javascript library which is built on top of ECMA Script 6">
     <meta name="keywords" content="javascript, es6, bootstrap, tailwindcss, compiler">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
